--- a/slutuppgiftCode/Shared/_LayoutPage.cshtml
+++ b/slutuppgiftCode/Shared/_LayoutPage.cshtml
@@ -2,28 +2,28 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />    
+    <meta name="viewport" content="width=device-width" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css.css">
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <link href="~/css/pizzeriahemsida.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Pizza4You</title>
     <style>
-       
-
     </style>
 </head>
 <body>
-    <div>
-        <ul class="nav justify-content-center" style="padding: 1rem;">
+    <div id="navbar">
+        <ul class="nav justify-content-center">
             <li>
+                <img id="logga"src="~/bilder/pizza4you.png" />
             </li>
             <li class="nav-item">
                 <a class="nav-link active" href="~/html/startsida.cshtml">Hem</a>
@@ -43,33 +43,33 @@
 
     <footer class="bg-dark text-center text-white">
 
-        <section style="padding: 2rem;" class="">
-            <div class="row">
+        <section >
+            <div id="footer" class="row">
                 <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">ÖPPETIDER - PIZZA 4 YOU </h5>
+                    <h2>ÖPPETIDER - PIZZA 4 YOU </h2>
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Måndag - Fredag 11:00-21:00</a>
+                            <p>Måndag - Fredag 11:00-21:00</p>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Lördag - Söndag 12:00-21:00</a>
+                            <p>Lördag - Söndag 12:00-21:00</p>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">KONTAKT</h5>
+                    <h2>KONTAKT</h2>
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">036 - 14 24 34</a>
+                            <p>036 - 14 24 34</p>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">pizza4you@hotmail.com</a>
+                            <p>pizza4you@hotmail.com</p>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Hakarpsvägen 67</a>
+                            <p>Hakarpsvägen 67</p>
                         </li>
                     </ul>
                 </div>
