--- a/slutuppgiftCode/html/menysida.cshtml
+++ b/slutuppgiftCode/html/menysida.cshtml
@@ -10,29 +10,26 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
+    
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
     <style>
-        h1, p, td, th {
+        /*css koden fungerade inte när jag skrev i den extärna css-filen så detta blev min lösning*/
+        h1, h2, p, td, th {
             font-family: "Amatic SC", sans-serif;
-            
+        }
+        h2 {
+            font-weight: bold;
         }
         h1 {
             font-weight: bold;
             font-size: 3rem;
         }
-        p {
-            font-size: 2rem;
-        }
-        #Pizza th, td {            
-            font-size: 3rem;
-        }       
-        #tablenumber {
-            padding-left: 5rem;
-        }
+
+
     </style>
 </head>
-<body>
+<bodys>
     <div>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
@@ -40,7 +37,7 @@
                     <img class="d-block w-100" src="~/bilder/menybild.jpg" data-src="holder.js/900x400?theme=social" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="~/bilder/unnamed.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
+                    <img class="d-block w-100" src="~/bilder/menybild2.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -53,12 +50,21 @@
             </a>
         </div>
     </div>
+    <div id="menydeskrivning">
+        <h1>PIZZA</h1>
+        <p>I alla pizzor ingår tomat och ost. Pizzasallad ingår. Barnpizza avdrag 10:- glutenfri pizza + 20:-</p>
+        <br />
+        <h2>FÖR FAMILJEPIZZOR</h2>
+        <p>För alla familjepizzor ingår 2 liter valfri dricka</p>
+        <br />
+    </div>
     <div>
         @{
             var db = Database.Open("pizzadatabasanslutning");
-            var queryString = "SELECT * FROM Pizzor ORDER BY Price DESC ";
-            var result = db.Query(queryString);
+            var queryString = "select * from pizzor ORDER BY Price DESC";
+            var result = db.Query(queryString);           
         }
+
         <table id="Pizza" class="table table-light table-striped">
             <thead class="thead-dark">
                 <tr>
@@ -72,43 +78,99 @@
                     int counter = 1;
                     foreach (var pizzor in result)
                     {
-                        /*<div id="Pizza" class="w3-container menu w3-padding-32 w3-white">
-                            <h1><p>@pizzor.Name</p> <span class="w3-right w3-tag w3-dark-grey w3-round">@pizzor.Price kr</span></h1>
-                            <p class="w3-text-grey"></p>
-                        </div>*/
-                        <tr>
-                            <th scope="row" id="tablenumber">@counter</th>
-                            <td>@pizzor.Name</td>
-                            <td>@pizzor.Price kr</td>
-                        </tr>
-                        counter = counter + 1;
+                            var db2 = Database.Open("pizzadatabasanslutning");
+                            var queryString2 = "select ingredienser.name from pizzor join pizzaingredienser on pizzor.id=pizzaingredienser.pizzaid join ingredienser on pizzaingredienser.ingrediensid=ingredienser.id where pizzor.Name = '" + pizzor.name + "' order by pizzor.name, ingredienser.name";
+                            var result2 = db.Query(queryString2);
+
+                            <tr>
+                                <th scope="row" id="tablenumber">@counter</th>
+                                <td>
+                                    @pizzor.Name
+
+                                    @foreach (var PizzaIngredienser in result2)
+                                    {
+                                        <p id="Pizzaname"> @PizzaIngredienser.name </p>
+                                    }
+                                </td>
+
+                                <td>@pizzor.Price kr</td>
+                            </tr>
+                            counter = counter + 1;                        
                     }
                 }
             </tbody>
         </table>
     </div>
-    <div >
+    <div>
         <div class="card-deck">
             <div class="card" style="border: none;">
-                <div class="card-body">
+                <div class="card-body" id="menydeskrivning">
                     <h1 class="card-title">KEBAB</h1>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <table class="table table-light table-striped">
+                        <tr>
+                            <td>
+                                Kebabtallrik: 95kr
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Kebabrulle: 95kr
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Kebab med bröd: 85kr
+                            </td>
+                        </tr>
+                        </table>
                 </div>
             </div>
             <div class="card" style="border: none;">
-                <div class="card-body" >
+                <div class="card-body" id="menydeskrivning">
                     <h1 class="card-title">FALAFEL</h1>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <table class="table table-light table-striped">
+                        <tr>
+                            <td>
+                                Falafeltallrik: 95kr
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Falafelrulle: 95kr
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Falafel med bröd: 85kr
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="card" style="border: none;">
-                <div class="card-body">
+                <div class="card-body" id="menydeskrivning">
                     <h1 class="card-title">KYCKLING</h1>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <table class="table table-light table-striped">
+                        <tr>
+                            <td>
+                                Kyklingtallrik: 95kr
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Kebabrulle: 95kr
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Kykling med bröd: 85kr
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
-
-    </div>
-</body>
+    </div>   
+    <br>
+</bodys>
 </html>
