--- a/slutuppgiftCode/html/startsida.cshtml
+++ b/slutuppgiftCode/html/startsida.cshtml
@@ -10,51 +10,51 @@
     <title></title>
 </head>
 <body>
-    <div>
+    <div >
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">                    
-                    <img class="d-block w-100" src="~/bilder/pizza-crust-bubbles.jpg"  data-src="holder.js/900x400?theme=social" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
+                    <img class="d-block w-100" src="~/bilder/startsida1.jpg"  data-src="holder.js/900x400?theme=social" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="~/bilder/disciplinare_avpn_2.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
+                    <img class="d-block w-100" src="~/bilder/startsida1.jpg" data-src="holder.js/900x400?theme=industrial" alt="900x400" data-holder-rendered="true" style="width: 900px; height: 400px;">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+                <span class="sr-only">Föregående</span>
             </a>
             <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+                <span class="sr-only">Nästa</span>
             </a>
         </div>
-
-        <!--Container och text-->
-        <div class="container">
+        
+        <div id="containertext" class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="~/bilder/test1.jpg" alt="..." /></div>
+                    <img class="img-fluid rounded-circle" src="~/bilder/startsidacontentbild.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Om oss...</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                        <p>Vi är Huskvarnas bästa pizzeria. Vi har funnits sedan 90-talet så vi vet hur man gör riktigt goda pizzor. 
+                        För 1 års sedan renoverade vi hela resturangen så den är fräsch och ren. Vi på pizza4you har utnämnade till Jönköpings bästa pizza två gånger.  </p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div id="containertext"  class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="~/bilder/test2.jpg" alt="..." /></div>
+                    <img class="img-fluid rounded-circle" src="~/bilder/startsidacontentbild2.jpg" alt="..." /></div>
                 </div>
                 <div class="col-lg-6">
                     <div class="p-5">
                         <h2 class="display-4">Våra ingredienser...</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                        <p>Alla våra ingredienser är kravmärkta, ekologiskta och innerhåller svenskt kött. Vi använder dessa ingredienser för att värna om miljön och minska på koldioxid utsläpp.</p>
                     </div>
                 </div>
             </div>
